clean error mongos startup error handling when some config servers down SERVER-1936